// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"edit artworks" button does not render an edit button if there are no artworks 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c6 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c6:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c6 .filter {
  margin-top: 1em;
}

.c6 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c6 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c3 {
  margin-top: 8px;
}

.c5 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  display: inline;
  margin-right: 0.5px;
}

.c4 {
  position: relative;
}

.c4 label {
  padding: 0;
  margin: 0;
}

.c4 select {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 0.01px;
  text-overflow: "";
  background-color: #E5E5E5;
  border-radius: 2px;
  font-size: px;
  line-height: px;
  padding: 5px 26px 5px 10px;
}

.c4 select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.c4 select option:not(:checked) {
  color: black;
}

.c4 select:hover {
  background-color: #C2C2C2;
}

.c4 select:focus {
  border-color: #6E1EFF;
}

.c4::after {
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  width: 0;
  height: 0;
  content: "";
  cursor: pointer;
  margin-left: -18px;
  pointer-events: none;
  position: absolute;
  top: 10px;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c1 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c1 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Restrict to artwork IDs"
      type="text"
    />
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onSelect={[Function]}
      title="Sort"
    >
      <label>
        <div
          className="c5 "
          display="inline"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="12px"
        >
          Sort
          :
        </div>
        <select
          onChange={[Function]}
        >
          <option
            value="MERCHANDISABILITY"
          >
            Merchandisability
          </option>
          <option
            value="RECENTLY_PUBLISHED"
          >
            Recently published
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="c6"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        For Sale?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;

exports[`"edit artworks" button renders a disabled edit button if there are artworks, but none selected 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c6 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c6:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c6 .filter {
  margin-top: 1em;
}

.c6 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c6 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c3 {
  margin-top: 8px;
}

.c5 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  display: inline;
  margin-right: 0.5px;
}

.c8 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding-top: 1px;
}

.c7 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #000;
  border-color: #000;
  color: #FFF;
}

.c7.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c7.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c4 {
  position: relative;
}

.c4 label {
  padding: 0;
  margin: 0;
}

.c4 select {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 0.01px;
  text-overflow: "";
  background-color: #E5E5E5;
  border-radius: 2px;
  font-size: px;
  line-height: px;
  padding: 5px 26px 5px 10px;
}

.c4 select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.c4 select option:not(:checked) {
  color: black;
}

.c4 select:hover {
  background-color: #C2C2C2;
}

.c4 select:focus {
  border-color: #6E1EFF;
}

.c4::after {
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  width: 0;
  height: 0;
  content: "";
  cursor: pointer;
  margin-left: -18px;
  pointer-events: none;
  position: absolute;
  top: 10px;
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c7:hover {
    background-color: #6E1EFF;
    border-color: #6E1EFF;
    color: #FFF;
  }
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c1 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c1 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Restrict to artwork IDs"
      type="text"
    />
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onSelect={[Function]}
      title="Sort"
    >
      <label>
        <div
          className="c5 "
          display="inline"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="12px"
        >
          Sort
          :
        </div>
        <select
          onChange={[Function]}
        >
          <option
            value="MERCHANDISABILITY"
          >
            Merchandisability
          </option>
          <option
            value="RECENTLY_PUBLISHED"
          >
            Recently published
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="c6"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        For Sale?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
  <button
    className="c7  disabled"
    disabled={true}
    height="41px"
    onClick={[Function]}
    width={1}
  >
    <div
      className="c8 "
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="14px"
    >
      Edit Artworks
    </div>
  </button>
</div>
`;

exports[`"edit artworks" button renders an enabled edit button if there are selected artworks 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c6 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c6:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c6 .filter {
  margin-top: 1em;
}

.c6 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c6 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c3 {
  margin-top: 8px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 8px;
}

.c5 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  display: inline;
  margin-right: 0.5px;
}

.c8 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding-top: 1px;
}

.c11 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  padding-top: 1px;
}

.c7 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #000;
  border-color: #000;
  color: #FFF;
}

.c7.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c7.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c10 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  margin-right: 10px;
  padding-left: 20px;
  padding-right: 20px;
  width: 50%;
  height: 26px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #000;
}

.c10.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c10.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c12 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  margin-left: 10px;
  padding-left: 20px;
  padding-right: 20px;
  width: 50%;
  height: 26px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #000;
}

.c12.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c12.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c4 {
  position: relative;
}

.c4 label {
  padding: 0;
  margin: 0;
}

.c4 select {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 0.01px;
  text-overflow: "";
  background-color: #E5E5E5;
  border-radius: 2px;
  font-size: px;
  line-height: px;
  padding: 5px 26px 5px 10px;
}

.c4 select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.c4 select option:not(:checked) {
  color: black;
}

.c4 select:hover {
  background-color: #C2C2C2;
}

.c4 select:focus {
  border-color: #6E1EFF;
}

.c4::after {
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  width: 0;
  height: 0;
  content: "";
  cursor: pointer;
  margin-left: -18px;
  pointer-events: none;
  position: absolute;
  top: 10px;
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c7:hover {
    background-color: #6E1EFF;
    border-color: #6E1EFF;
    color: #FFF;
  }
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c10:hover {
    background-color: #C2C2C2;
    border-color: #C2C2C2;
    color: #000;
  }
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c12:hover {
    background-color: #C2C2C2;
    border-color: #C2C2C2;
    color: #000;
  }
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c1 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c1 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Restrict to artwork IDs"
      type="text"
    />
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onSelect={[Function]}
      title="Sort"
    >
      <label>
        <div
          className="c5 "
          display="inline"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="12px"
        >
          Sort
          :
        </div>
        <select
          onChange={[Function]}
        >
          <option
            value="MERCHANDISABILITY"
          >
            Merchandisability
          </option>
          <option
            value="RECENTLY_PUBLISHED"
          >
            Recently published
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="c6"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        For Sale?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
  <button
    className="c7  "
    height="41px"
    onClick={[Function]}
    width={1}
  >
    <div
      className="c8 "
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="14px"
    >
      Edit Artworks
    </div>
  </button>
  <div
    className="c9"
  >
    <button
      className="c10  "
      height="26px"
      onClick={[Function]}
      width="50%"
    >
      <div
        className="c11 "
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="12px"
      >
        Open in Helix
      </div>
    </button>
    <button
      className="c12  "
      height="26px"
      onClick={[Function]}
      width="50%"
    >
      <div
        className="c11 "
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="12px"
      >
        Copy IDs 
      </div>
    </button>
  </div>
</div>
`;

exports[`does not render attribution class autosuggest if it is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c7 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c7:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c7 .filter {
  margin-top: 1em;
}

.c7 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c7 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c4 {
  margin-top: 8px;
}

.c6 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  display: inline;
  margin-right: 0.5px;
}

.c5 {
  position: relative;
}

.c5 label {
  padding: 0;
  margin: 0;
}

.c5 select {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 0.01px;
  text-overflow: "";
  background-color: #E5E5E5;
  border-radius: 2px;
  font-size: px;
  line-height: px;
  padding: 5px 26px 5px 10px;
}

.c5 select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.c5 select option:not(:checked) {
  color: black;
}

.c5 select:hover {
  background-color: #C2C2C2;
}

.c5 select:focus {
  border-color: #6E1EFF;
}

.c5::after {
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  width: 0;
  height: 0;
  content: "";
  cursor: pointer;
  margin-left: -18px;
  pointer-events: none;
  position: absolute;
  top: 10px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Attribution Class
      </h2>
      <div
        className="c1"
      >
        Ephemera
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c2 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c2 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Restrict to artwork IDs"
      type="text"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
      onSelect={[Function]}
      title="Sort"
    >
      <label>
        <div
          className="c6 "
          display="inline"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="12px"
        >
          Sort
          :
        </div>
        <select
          onChange={[Function]}
        >
          <option
            value="MERCHANDISABILITY"
          >
            Merchandisability
          </option>
          <option
            value="RECENTLY_PUBLISHED"
          >
            Recently published
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="c7"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        For Sale?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;

exports[`does not render fair autosuggest if fair is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c7 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c7:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c7 .filter {
  margin-top: 1em;
}

.c7 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c7 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c4 {
  margin-top: 8px;
}

.c6 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  display: inline;
  margin-right: 0.5px;
}

.c5 {
  position: relative;
}

.c5 label {
  padding: 0;
  margin: 0;
}

.c5 select {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 0.01px;
  text-overflow: "";
  background-color: #E5E5E5;
  border-radius: 2px;
  font-size: px;
  line-height: px;
  padding: 5px 26px 5px 10px;
}

.c5 select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.c5 select option:not(:checked) {
  color: black;
}

.c5 select:hover {
  background-color: #C2C2C2;
}

.c5 select:focus {
  border-color: #6E1EFF;
}

.c5::after {
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  width: 0;
  height: 0;
  content: "";
  cursor: pointer;
  margin-left: -18px;
  pointer-events: none;
  position: absolute;
  top: 10px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Fair
      </h2>
      <div
        className="c1"
      >
        Nice Fair
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c2 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c2 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Restrict to artwork IDs"
      type="text"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
      onSelect={[Function]}
      title="Sort"
    >
      <label>
        <div
          className="c6 "
          display="inline"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="12px"
        >
          Sort
          :
        </div>
        <select
          onChange={[Function]}
        >
          <option
            value="MERCHANDISABILITY"
          >
            Merchandisability
          </option>
          <option
            value="RECENTLY_PUBLISHED"
          >
            Recently published
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="c7"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        For Sale?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;

exports[`does not render partner autosuggest if partner is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c7 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c7:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c7 .filter {
  margin-top: 1em;
}

.c7 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c7 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c4 {
  margin-top: 8px;
}

.c6 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  display: inline;
  margin-right: 0.5px;
}

.c5 {
  position: relative;
}

.c5 label {
  padding: 0;
  margin: 0;
}

.c5 select {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 0.01px;
  text-overflow: "";
  background-color: #E5E5E5;
  border-radius: 2px;
  font-size: px;
  line-height: px;
  padding: 5px 26px 5px 10px;
}

.c5 select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.c5 select option:not(:checked) {
  color: black;
}

.c5 select:hover {
  background-color: #C2C2C2;
}

.c5 select:focus {
  border-color: #6E1EFF;
}

.c5::after {
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  width: 0;
  height: 0;
  content: "";
  cursor: pointer;
  margin-left: -18px;
  pointer-events: none;
  position: absolute;
  top: 10px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Partner
      </h2>
      <div
        className="c1"
      >
        Nice Gallery
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c2 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c2 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Restrict to artwork IDs"
      type="text"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
      onSelect={[Function]}
      title="Sort"
    >
      <label>
        <div
          className="c6 "
          display="inline"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="12px"
        >
          Sort
          :
        </div>
        <select
          onChange={[Function]}
        >
          <option
            value="MERCHANDISABILITY"
          >
            Merchandisability
          </option>
          <option
            value="RECENTLY_PUBLISHED"
          >
            Recently published
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="c7"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        For Sale?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c6 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c6:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c6 .filter {
  margin-top: 1em;
}

.c6 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c6 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c3 {
  margin-top: 8px;
}

.c5 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  display: inline;
  margin-right: 0.5px;
}

.c4 {
  position: relative;
}

.c4 label {
  padding: 0;
  margin: 0;
}

.c4 select {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 0.01px;
  text-overflow: "";
  background-color: #E5E5E5;
  border-radius: 2px;
  font-size: px;
  line-height: px;
  padding: 5px 26px 5px 10px;
}

.c4 select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.c4 select option:not(:checked) {
  color: black;
}

.c4 select:hover {
  background-color: #C2C2C2;
}

.c4 select:focus {
  border-color: #6E1EFF;
}

.c4::after {
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  width: 0;
  height: 0;
  content: "";
  cursor: pointer;
  margin-left: -18px;
  pointer-events: none;
  position: absolute;
  top: 10px;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c1 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c1 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Restrict to artwork IDs"
      type="text"
    />
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onSelect={[Function]}
      title="Sort"
    >
      <label>
        <div
          className="c5 "
          display="inline"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="12px"
        >
          Sort
          :
        </div>
        <select
          onChange={[Function]}
        >
          <option
            value="MERCHANDISABILITY"
          >
            Merchandisability
          </option>
          <option
            value="RECENTLY_PUBLISHED"
          >
            Recently published
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="c6"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        For Sale?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;
